[package]
name = "esp-ds18b20"
version = "0.9.0"
edition = "2024"
authors = ["Andre Braga Reis <andre@saltwing.com>"]
description = "A 1-Wire DS18B20 temperature sensor driver for ESP32 devices."
license = "Apache-2.0/MIT"
repository = "https://github.com/abreis/esp-ds18b20"
documentation = "https://docs.rs/esp-ds18b20"
keywords = ["ds18b20", "temperature", "onewire", "esp-hal", "esp32", "embedded"]
categories = ["embedded", "no-std", "hardware-support"]
readme = "README.md"

[dependencies]
esp-onewire = { git = "https://github.com/abreis/esp-onewire", tag = "v1.0.0" }
thiserror = { version = "2", default-features = false }
